# playwright-python-testing

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  conftest.py  pyproject.toml  pytest.ini  ruff.toml
.github/: dependabot.yml
.github/workflows/: main.yml
pages/: base_page.py  blog.py  blog_page.py  elements.py  locators.py  main.py  main_page.py
pages/locators/: base_page_locators.py  blog_page_locators.py  main_page_locators.py  navbar_locators.py
pages/page_objects/: base_page.py  blog_page.py  main_page.py  navbar.py
tests/: conftest.py  test_STX_page.py  test_blog_page.py  test_main_page.py  test_navbar.py  test_stx_blog.py
